	(gtk.gdk.pixbuf_loader_new_with_mime_type)
	Add description for this PyGTK 2.4 function
	("size-prepared") Add desription of this GTK+ 2.2 signal.

	* pygtk-gdkpixmap.xml (gtk.gdk.pixmap_foreign_new_for_display)
	(gtk.gdk.pixmap_lookup_for_display) Add descriptions for these
	PyGTK 2.2 functions.

	* pygtk-gdkrectangle.xml (union) Fix typo.

	* pygtk-gdkscreen.xml Add.
	Add purpose description.

2004-04-21  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkgc.xml (get_screen) Add description of this PyGTK 2.2
	method

	* pygtk-gdkkeymap.xml (keymap_get_for_display) Add desciption of
	this PyGTK 2.2 function.
	(keyval_convert_case) Add description of this PyGTK 2.4 function.
	(get_entries_for_keyval)
	(get_entries_for_keycode)
	(lookup_key)
	(translate_keyboard_state) Add descriptions of these PyGTK 2.4 methods.

	* pygtk-gdkevent.xml (gtk.gdk.KEY_PRESS) Add "hardware_keycode"
	attribute description for PyGTK 2.2. Add "group" attribute
	description for PyGTK 2.4.

2004-04-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtk-classes.xml Add pygtk-gtk-stock-items.xml to list

	* pygtk-gtk-stock-items.xml Fix reference to stock_network_24.png
	and stock_new_24.png

	* pygtk-gdkatom.xml Tweak the description.

	* pygtk-gdkcolormap.xml (get_screen) Add description of
	PyGTK 2.4 method.
	(gtk.gdk.colormap_get_system) Add reference to
	gtk.gdk.Screen.get_system_colormap() method.

	* pygtk-gdkcursor.xml (get_display) Add description of this
	PyGTK 2.2 method.
	Add descriptions of 2 more constructor signatures for PyGTK 2.4.

	* pygtk-gdkdevice.xml Reorder attribute list.

	* pygtk-gdkatom.xml (atom_intern) Note that value of
	only_if_exists is ignored.

	* pygtk-gdkdisplay.xml Add.

	* pygtk-gdkdisplaymanager.xml Add.

	* pygtk-gdkdragcontext.xml (find_window_for_screen) Add description
	for this PyGTK 2.2 method.

	* pygtk-gdkdrawable.xml (get_screen) (get_display) (draw_pixbuf)
	Add descriptions of these PyGTK 2.2 methods. Update the Description.
