@@ -27,6 +27,11 @@
 	* pygtk-gdkscreen.xml Add.
 	Add purpose description.
 
+	* pygtk-gdkvisual.xml Reorder attribute list.
+	(get_screen) Add desciption of this PyGTK 2.2 method.
+	(query_depths) (query_visual_types)
+	Add description of these PyGTK 2.4 functions.
+
 2004-04-21  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkgc.xml (get_screen) Add description of this PyGTK 2.2
